<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Share Icons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageButton
            android:id="@+id/shareInstagram"
            android:layout_width="94dp"
            android:layout_height="82dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/share_instagram"
            android:src="@drawable/instagram" />

        <ImageButton
            android:id="@+id/shareWhatsApp"
            android:layout_width="94dp"
            android:layout_height="82dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/share_whatsapp"
            android:src="@drawable/whatsapp" />

        <ImageButton
            android:id="@+id/shareEmail"
            android:layout_width="94dp"
            android:layout_height="82dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/email"
            android:contentDescription="@string/share_email"
            android:background="?attr/selectableItemBackgroundBorderless" />
    </LinearLayout>

    <!-- Share Link -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/shareLinkText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Share link"
            android:textSize="16sp"
            android:textColor="?android:attr/textColor" />

        <Button
            android:id="@+id/copyLinkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Copy" />
    </LinearLayout>
</LinearLayout>
